fix ocean story n wrapping on wide screens

--- a/marco_site/assets/scss/_ocean_story.scss
+++ b/marco_site/assets/scss/_ocean_story.scss
@@ -42,7 +42,9 @@
     .ocean-story-n {
       //Roboto condensed regular, all caps, 16pt, tracked 35pt
       font-size: 16px;
-      border-bottom: 4px solid $brand-warning;
+      > span {
+        border-bottom: 4px solid $brand-warning;
+      }
     }
     .hook {
       font-size: 51px;
